<resources>
    <string name="app_name">LetMeKnow</string>
    <!-- Activity titles -->
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_task_list">Task List</string>
    <string name="title_activity_task">Task</string>
    <!-- Settings Key -->
    <string name="key_trigger_daily_time" translatable="false">prefDailyTime</string>
    <string name="key_trigger_daily_notification" translatable="false">prefDaily</string>
    <string name="key_create_default_notification" translatable="false">prefDefNot</string>
    <!-- Settings Titles -->
    <string name="title_notification_group">NOTIFICATION</string>
    <string name="title_trigger_daily_time">Daily time</string>
    <string name="title_trigger_daily_notification">Daily notification</string>
    <string name="title_create_default_notification">Create default notification</string>
    <!-- Settings Summary -->
    <string name="summary_trigger_daily_time">Time when daily notification is raised</string>
    <string name="summary_trigger_daily_notification">Trigger notification with the day tasks</string>
    <string name="summary_create_default_notification">Create default notification when a task is created with time</string>
    <!-- Text for Tiles -->
    <string-array name="text_tile_content">
        <item>EXPIRED</item>
        <item>TODAY</item>
        <item>FUTURE</item>
        <item>ANY TIME</item>
    </string-array>
    <string-array name="text_defaults_primary_line">
        <item>Last expired task</item>
        <item>Next today task</item>
        <item>Next future task</item>
        <item>Last entered task</item>
    </string-array>
    <string name="text_date_label">Date</string>
    <string name="text_today">Today</string>
    <string name="text_tomorrow">Tomorrow</string>
    <string name="text_yesterday">Yesterday</string>

    <!-- Text for Navigation Drawer -->
    <string name="drawer_open" translatable="false">drawer open</string>
    <string name="drawer_close" translatable="false">drawer close</string>
    <string name="menu_settings">Settings</string>

    <!-- Home Screen -->
    <string name="hint_edit_text_task_name">Task Name</string>

    <!-- Validation Error Messages -->
    <string name="error_task_name_greater_than_max">max length is 50</string>
    <string name="error_task_name_empty">empty not allowed</string>
    <string name="error_task_date_less_than_today">Lowest value is today</string>
    <string name="error_task_time_less_than_today">Lowest value is now</string>

    <!-- Values for Task Type Spinner -->
    <string-array name="type_task_array">
        <item>All</item>
        <item>Expired</item>
        <item>Today</item>
        <item>Future</item>
        <item>AnyTime</item>
    </string-array>

    <!-- Task Activity -->
    <string name="hint_edit_task_date">Date</string>
    <string name="hint_edit_task_time">Time</string>
    <string name="button_ok">OK</string>

    <!-- Type Notifications Array -->
    <string-array name="type_notifications_array">
        <item>5 minutes before</item>
        <item>1 hour before</item>
        <item>1 day before</item>
        <item>1 week before</item>
    </string-array>

    <!-- SnackBar -->
    <string name="snack_bar_task_completed_text">Completed</string>
    <string name="snack_bar_action_text">UNDO</string>

    <!-- Task List Activity -->
    <string name="title_menu_item_delete">Delete</string>
    <string name="title_menu_item_share">Share</string>

    <!-- Delete Task Dialog -->
    <string name="delete_task_dialog_title">Delete Task?</string>
    <string name="delete_task_dialog_cancel_text">Cancel</string>
    <string name="delete_task_dalog_ok_text">Delete</string>
    <string name="delete_tasks_dialog_title">Delete Tasks?</string>
    <string name="title_activity_notification_list">Notification List</string>

    <!-- Notification -->
    <string name="notification_title_tasks">New Task Notifications</string>
    <string name="notification_content_tasks">Tasks</string>
    <string name="notifications_tracker_details">Task details:</string>
    <string name="notification_title_today_tasks">Tasks for Today</string>

    <!-- Recognizer Intent Error Dialog -->
    <string name="voice_intent_error_title">Error</string>
    <string name="voice_intent_error_content">Voice recognition is not available in your device</string>
    <string name="voice_intent_error_ok">OK</string>

    <!-- CalendarView buttons -->
    <string name="calendar_view_ok">OK</string>
    <string name="calendar_view_cancel">Cancel</string>

    <!-- Common -->
    <string name="error_title">Error</string>
    <string name="error_button_ok">OK</string>

    <!-- UnitOfWorkException Messages -->
    <string name="unit_of_work_exception">An error occurred in database</string>
    <string name="unit_of_work_locked_exception">Database cannot be accessed. The application will be closed</string>
    <string name="unit_of_work_io_exception">Disk access error occurred</string>

</resources>
